# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.457 2005/11/05 20:01:07 codeman Exp $

*GLI-0.3 (17 Oct 2005)

  5 Nov 2005; Preston Cody <codeman@gentoo.org>
  webgli: lots of updates.  preliminary partitioning.  extra packages works.
  
  3 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/gliserv.py:
  httpd now supports HTTPS and falls back to HTTP if not available
  make fallback actually work
  src/net/server/SecureXMLRPCServer.py:
  SecureSocketServer is now threaded

  2 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/client/gliclient.py:
  try to use HTTPS for XMLRPC first and fallback to HTTP
  pretend mode
  src/net/server/gliserv.py, src/net/server/SecureXMLRPCServer.py:
  HTTPS XMLRPC goodness from samyron
  pass name of certificate

  31 Oct 2005; Preston Cody <codeman@gentoo.org>
  wegli: daemons and services screens done.
  
  30 Oct 2005; Preston Cody <codeman@gentoo.org>
  webgli: networking and users screens
  added return_redirect to handler.py
  loading and saving install/client profiles works for webgli now
  Review also done
    
  26 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  properly check for bootloader emerge exist status with exitsuccess()
  log output of grub install command
  add --batch --no-floppy to grub command
  grubinstallstring only gets logged if debug is on
  src/GLIUtility.py:
  update progress bar to 100% when process finishes

  25 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIClientController.py:
  added debugging code for the interaction between the 2 threads via Event()
  src/GLIUtility.py:
  doubled the buffer size in spawn()
  bump buffer size up to 16384
  only report progress in 5% increments
  src/GLIArchitectureTemplate.py:
  kernelpkgs.txt support code
  above disabled because it sucks
  added add_pkg_to_world()
