@@ -1,9 +1,15 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.457 2005/11/05 20:01:07 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.458 2005/11/05 23:42:44 agaffney Exp $
 
 *GLI-0.3 (17 Oct 2005)
+
+  5 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIArchitectureTemplate.py:
+  copy_pkg_to_chroot() overhaul - does install the Right Way(TM) (copy files to
+  image dir, run pkg_setup, pkg_preinst, copy to /, pkg_postinst, remove image
+  dir) and works around /etc/gconf symlink problem
 
   5 Nov 2005; Preston Cody <codeman@gentoo.org>
   webgli: lots of updates.  preliminary partitioning.  extra packages works.
